# langchain-chat

./: .env.example  .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml
config/: logging.yaml  presets.yaml
examples/: example1_http.py  example2_openai_sdk.py  example3_langchain.py
scripts/: __init__.py  init_db.py  test_chat_engine.py
src/: main.py
src/core/: chat-engine.py  chat_engine.py  config_manager.py  preset_manager.py  session_manager.py  user_manager.py
src/interface/: __init__.py  ui_protocol.py
src/models/: __init__.py  schemas.py
src/storage/: __init__.py  base.py  factory.py  sqlite_backend.py
src/ui/: __init__.py
src/ui/tui/: __init__.py  app.py  chat_view.py  menu_view.py  widgets.py
