[project]
name = "chat-bot"
version = "0.1.0"
description = "基于 LangChain 的多轮会话系统"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-openai>=1.3.4",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.51.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
